# DTN-Onion-Routing-NS-3

./: .gitignore  README.md
onion-path-finder/: CMakeLists.txt  Doxyfile  license-template.h
onion-path-finder/data/: paper-example.txt
onion-path-finder/src/: CMakeLists.txt  main.cpp  main.dox  neighbor.cpp  neighbor.h  onion-path-finder.cpp  oracleNetwork.cpp  oracleNetwork.h  parser.cpp  parser.h
onion-path-finder/src/core/: CMakeLists.txt  log-system.cpp  log-system.h  object-factory.cpp  object-factory.h  onion-constants.h
onion-path-finder/src/core/doc/: core.dox
onion-path-finder/src/graph/: CMakeLists.txt  neighbor.cpp  neighbor.h
onion-path-finder/src/graph/doc/: graph.dox
onion-path-finder/src/parsers/: CMakeLists.txt  basic-parser.cpp  basic-parser.h  crawdad-parser.cpp  crawdad-parser.h  id-converter.cpp  id-converter.h  parser-factory.cpp  parser-factory.h  parser.h
onion-path-finder/src/parsers/doc/: parsers.dox
onion-path-finder/src/ui/: CMakeLists.txt  console-color.cpp  console-color.h  ui.cpp  ui.h
onion-path-finder/src/ui/doc/: ui.dox
onion-path-finder/src/utils/: CMakeLists.txt  graph-util.cpp  graph-util.h  oracle-network.cpp  oracle-network.h  timing-adversary.cpp  timing-adversary.h
onion-path-finder/src/utils/doc/: utils.dox
paper/: paper.bib  paper.tex  structure
paper/imgs/: onion.eps
paper/inc/: conclusions.tex  evaluation.tex  futurework.tex  introduction.tex  proposal.tex  (+3 more)
presentation/: presentation.tex
scripts/: TracesToNS2.py  convertToGEXF.py  createGraphics.m  createKTime.m  createNTime.m  plotNS2Trace.m
(+44 files in other folders)
